<resources>
    <string name="app_name">Just Java</string>
    <string name="customer_name">Name</string>
    <string name="local_address">Address</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="one">1</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="demand_order">Order</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="topping">Topping</string>
    <string name="thank_you">Thank you!</string>
</resources>
